# tributary

./: README.md  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  test.rtxt
data/: ground_truth.json  volta_marketing.csv
notebooks/: tributary_hierarchical_mmm_music_marketing.ipynb
src/tributary/: cli.py
src/tributary/data/: __init__.py  schemas.py  synthetic.py
src/tributary/evaluation/: __init__.py  diagnostics.py  roas.py
src/tributary/models/: __init__.py  hierarchical.py  pooled.py  unpooled.py
src/tributary/transforms/: __init__.py  adstock.py  saturation.py
tests/: conftest.py  test_transforms.py
